--- a/posts/2011-10-13-dart.markdown
+++ b/posts/2011-10-13-dart.markdown
@@ -1,8 +1,8 @@
 ---
 title:        Darting around
-description:  Trying out Google’s new programming language on OS X
+description:  Taking Google’s new programming language out for a spin on Mac OS X.
 author:       Jonas Westerlund
-tags:         clang, dart, javascript, llvm, mac, xcode
+tags:         clang, dart, javascript, llvm, os-x, xcode
 ---
 
 Collecting some stuff I come across while trying out [Dart](http://www.dartlang.org/).
